# neoforge

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/neoforge/: main.py
src/neora/: crew.py  main.py
src/neora/config/: agents.yaml  tasks.yaml
