[project]
name = "neora"
version = "0.1.0"
description = "neora using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "gradio>=5.35.0",
]

[project.scripts]
neora = "neora.main:run"
run_crew = "neora.main:run"
train = "neora.main:train"
replay = "neora.main:replay"
test = "neora.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
